# ehr-adaptive-agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/sql/: init_training_db.sql
scripts/: test_ollama_live.py  train_fhir_agent.py
scripts/examples/: explore_fhir.py
src/config/: settings.py
src/fhir/: client.py
src/models/: ollama.py
src/tests/: test_fhir_client.py
src/tools/fhir_tools/: explorer.py
tests/: test_explorer.py  test_fhir_client.py
tests/integration/: test_ollama_live.py
tests/models/: test_ollama.py
tests/tools/fhir_tools/: test_client.py  test_explorer.py
