[tool.poetry]
name = "ehr-adaptive-agent"
version = "0.1.0"
description = "Adaptive AI agent for FHIR data structure mapping"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fhirclient = "^4.1.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
pytest = "^8.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.7.1"
asyncio = "^3.4.3"
pytest-asyncio = "^0.25.3"
httpx = "^0.27.0"
langchain = "^0.1.0"
langchain-community = "^0.0.13"
litellm = "^1.16.0"
rich = "^13.9.4"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as an asyncio test",
    "integration: mark test as an integration test",
]